--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "axios": "^1.6.8",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
-        "vue": "^3.4.23"
+        "vue": "^3.4.23",
+        "vue-axios": "^3.5.2",
+        "vue-router": "^4.3.2",
+        "vuetify": "^3.5.17"
     }
 }
