--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "@vitejs/plugin-vue": "^5.0.4",
+        "material-design-icons-iconfont": "^6.7.0",
         "vue": "^3.4.23",
         "vue-axios": "^3.5.2",
         "vue-router": "^4.3.2",
