--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@mdi/font": "^7.4.47",
         "@vitejs/plugin-vue": "^5.0.4",
+        "@vueup/vue-quill": "^1.2.0",
         "material-design-icons-iconfont": "^6.7.0",
         "pinia": "^2.1.7",
         "vue": "^3.4.23",
